# Cosmic-Lens-Lab

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  physics_model.md
.github/workflows/: checks.yml  ci.yml  pages.yml  validate.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: AstroConsole.tsx  Controls.tsx  DiagnosticsRail.tsx  Footer.tsx  FrameGridTimeline.tsx  LensingViewport.tsx  Overlay.tsx  (+8 more)
docs/: animation-rendering.md  architecture.md  github-growth-strategy.md  implementation-notes.md  master-build-prompt.md  nfw_fermat_model.md  physics.md  references.md  roadmap.md  ui-blueprint.md  unique-features.md  validation.md  validation_contract.md  viewport-visualisation-policy.md
examples/animation/: readme-framegrid-caustic-breathing.json  readme-framegrid-subhalo-flyby.json
examples/cluster/: nfw-cluster.json
examples/cosmography/: time-delay-sandbox.json
examples/galaxy/: composite-sersic-nfw.json  sie-quad.json  subhalo-anomaly.json
examples/textbook/: point-mass-ring.json  sis-double.json
python/: pyproject.toml
python/cosmiclens_validate/: __init__.py  compare_scene.py  cosmology.py  framegrid.py  nfw.py  point_mass.py  sis.py
python/tests/: test_nfw.py  test_nfw_scale.py  test_point_mass.py  test_sis.py
tests/fixtures/: README.md
tools/: validate_lensing_contract.py
(+11 files in other folders)
