[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmiclens-validate"
version = "0.1.0"
description = "Python reference validators for CosmicLens Lab."
authors = [{ name = "Biswajit Jana" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "astropy>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmiclens_validate*"]
